# pynfe-exemplos

./: README.md  cte_consulta_status.py  cte_distribuicao_dfe.py  mdfe_consulta_chave_de_acesso.py  mdfe_consulta_servico.py  mdfe_consultas_recibo.py  mdfe_consultas_viagens_nao_encerradas.py  mdfe_emissao.py  mdfe_eventos_cancelar.py  mdfe_eventos_encerramento.py  mdfe_eventos_inclusao_condutor.py  mdfe_eventos_inclusao_dfe.py  mdfe_eventos_inclusao_pagamento.py  nfe_cancelar.py  nfe_carta_correcao.py  nfe_consulta_cadastro.py  nfe_consulta_chave_de_acesso.py  nfe_consulta_status.py  nfe_distribuicao_dfe.py  nfe_emite_nfe_com_mais_produtos.py  nfe_emite_nfe_com_um_produto.py  nfe_inutiliza.py  nfe_manifestacao_destinatario.py  pyproject.toml
