[tool.poetry]
name = "pynfe-exemplos"
version = "0.1.0"
description = "Exemplos de uso do PyNFe"
authors = ["Leonardo Gregianin <leogregianin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.9.1"
urllib3 = "^1.26.11"
pynfe = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
